Fix missing image alignment outside the block editor

--- a/assets/sass/general-block-style.scss
+++ b/assets/sass/general-block-style.scss
@@ -207,3 +207,30 @@ input.wpcf7-not-valid {
 		opacity: .6;
 	}
 }
+
+/**
+Images alignments
+*/
+
+/*--------------------------------------------------------------
+# Alignments
+--------------------------------------------------------------*/
+img {
+	&.alignleft {
+		display: inline;
+		float: left;
+		margin-right: 30px; }
+	
+	&.alignright {
+		display: inline;
+		float: right;
+		margin-left: 30px;
+	}
+	
+	&.aligncenter {
+		clear: both;
+		display: block;
+		margin-left: auto;
+		margin-right: auto;
+	}
+}
